# ai-sales-assistant

./: .env.example  LICENSE  README.md  demo.sh  docker-compose.yml  pyproject.toml
app/: main.py  worker.py
app/api/: routes_chat.py  routes_twilio.py
app/core/: config.py  errors.py  logging.py
app/db/: models.py  session.py
app/llm/: client.py  orchestrator.py  prompts.py  schemas.py
app/memory/: session_store.py
app/queue/: redis_stream.py
app/rag/: embeddings.py  qdrant_store.py
app/scripts/: ingest_kavak_knowledge.py  init_db.py  seed_catalog.py  seed_catalog_old.py
app/services/: conversation_service.py  twilio_sender.py
app/tools/: catalog.py  financing.py  normalize.py  rag.py
docker/: Dockerfile
tests/: test_catalog_search.py  test_financing.py  test_normalize.py
