[project]
name = "kavak-sales-bot"
version = "0.1.0"
description = "Kavak Sales Agent Bot (FastAPI + Twilio WhatsApp + OpenAI tools + Postgres + Redis)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "qdrant-client>=1.9",
  "fastembed>=0.3",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "rapidfuzz>=3.6",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "openai>=1.30.0",
  "tenacity>=8.2",
  "structlog>=24.1",
  "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]